Fix contrast issue in Search Button

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ ul {
   border: 1px solid #009688;
   box-shadow: rgba(255, 255, 255, 0.7) 0 1px 0 0 inset;
   box-sizing: border-box;
-  color: #399d86;
+  color: #1f5549;
   cursor: pointer;
   display: inline-block;
   font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
